fix header alignments

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,10 @@ form {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    margin-left: 20px;
     margin-top: 8px;
+    align-self: center;
+    justify-self: center;
 }
 form input {
     width: 80%;
@@ -56,7 +59,6 @@ form input {
 form > button {
     border: none;
     background: none;
-    width: fit-content;
 }
 .search .icon {
     height: 30px;
@@ -67,7 +69,8 @@ form > button {
 .user-info {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    align-self: center;
+    justify-self: center;
 }
 .user-info .icon {
     height: 30px;
@@ -91,16 +94,24 @@ form > button {
 .hello > div {
     grid-area: 1/2/2/3;
     font-weight: 600;
+    align-self: end;
+    margin-bottom: 4px;
 }
 .hello > img {
     height: 100px;
     width: auto;
     grid-area: 1/1/3/2;
+    justify-self: center;
 }
 h2 {
     grid-area: 2/2/3/3;
+    margin: 0;
 }
 
+.post-buttons {
+    align-self: center;
+    justify-self: center;
+}
 .post-buttons button {
     border: none;
     color: white;
